<resources>
    <string name="app_name">Assignment</string>
    <string name="minimum_cost">Minimum cost</string>
    <string name="delivery_cost">Delivery cost</string>
    <string name="average_price">Average price</string>
    <string name="popularity">Popularity</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="newest">Newest</string>
    <string name="best_match">Best match</string>
    <string name="reset">Reset</string>
    <string name="no_results">Seems we can\'t find any restaurants</string>

    <!-- Formatted string templates -->
    <string name="formatted_best_match" translatable="false">Best match (%1$.2f)</string>
    <string name="formatted_newest" translatable="false">Newest (%1$.1f)</string>
    <string name="formatted_rating_average" translatable="false">Av.rating (%1$.1f)</string>
    <string name="formatted_distance" translatable="false">Distance (%d)</string>
    <string name="formatted_popularity" translatable="false">Popularity (%1$.1f)</string>
    <string name="formatted_product_average" translatable="false">PP. average (%d)</string>
    <string name="formatted_delivery_cost" translatable="false">Delivery (%d)</string>
    <string name="formatted_min_cost" translatable="false">Min c. (%d)</string>
</resources>